# codebase-md

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_CONTEXT.md  README.md  SECURITY.md  archietecture_plan.md  codex.md  demo.tape  fix_issue_1.md  fix_issue_2.md  fix_issue_3.md  fix_issue_5.md  pyproject.toml
.codebase/: config.yaml  project.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
agents/: architect.md  code-reviewer.md  developer.md  doc-writer.md  orchestrator.md  planner.md  security-reviewer.md  tester.md
docs/: progress.md
src/codebase_md/: __init__.py  cli.py
src/codebase_md/context/: __init__.py  chunker.py  ranker.py  router.py
src/codebase_md/depshift/: __init__.py  analyzer.py  changelog_parser.py  usage_mapper.py  version_differ.py
src/codebase_md/depshift/registries/: __init__.py  npm.py  pypi.py
src/codebase_md/generators/: __init__.py  agents_md.py  base.py  claude_md.py  codex_md.py  cursorrules.py  generic_md.py  windsurf.py
src/codebase_md/integrations/: __init__.py  git_hooks.py  github_action.py
src/codebase_md/model/: __init__.py  architecture.py  convention.py  decision.py  dependency.py  module.py  project.py
src/codebase_md/persistence/: __init__.py  decisions.py  store.py
src/codebase_md/scanner/: __init__.py  ast_analyzer.py  convention_inferrer.py  dependency_parser.py  differ.py  engine.py  git_analyzer.py  language_detector.py  structure_analyzer.py
tests/: conftest.py  test_cli.py
tests/fixtures/: conftest.py
tests/fixtures/empty_repo/: README.md
tests/fixtures/fastapi_app/: pyproject.toml
tests/fixtures/fastapi_app/app/: main.py  models.py
tests/fixtures/go_cli/: go.mod  main.go
tests/fixtures/go_cli/cmd/: root.go
tests/fixtures/go_cli/internal/: utils.go
tests/fixtures/mixed_lang/: README.md  package.json  pyproject.toml
tests/fixtures/mixed_lang/src/: server.py
tests/fixtures/monorepo/: README.md  package.json
tests/fixtures/nextjs_app/: package.json  tsconfig.json
tests/fixtures/nextjs_app/pages/: index.tsx
tests/fixtures/python_cli/: pyproject.toml
tests/fixtures/python_cli/tests/: test_cli.py
tests/fixtures/rust_cli/: Cargo.toml
tests/integration/: __init__.py  test_real_repos.py
tests/test_context/: test_chunker.py  test_ranker.py
tests/test_depshift/: test_analyzer.py  test_version_differ.py
tests/test_generators/: test_generators.py
tests/test_integrations/: test_git_hooks.py  test_github_action.py
tests/test_model/: test_models.py
tests/test_persistence/: test_store.py
tests/test_scanner/: test_dependency_parser.py  test_differ.py  test_engine.py  test_fixture_scans.py  test_language_detector.py  test_structure_analyzer.py
(+7 files in other folders)
