[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebase-md"
version = "0.1.0"
description = "The universal project brain — scan any codebase, generate context files for every AI coding tool."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Saurav" },
]
keywords = [
    "ai",
    "claude",
    "cursor",
    "codex",
    "windsurf",
    "codebase",
    "context",
    "developer-tools",
    "vibe-coding",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0",
]
ast = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
]

[project.scripts]
codebase = "codebase_md.cli:app"

[project.urls]
Homepage = "https://github.com/sauravanand542/codebase-md"
Repository = "https://github.com/sauravanand542/codebase-md"
Issues = "https://github.com/sauravanand542/codebase-md/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/codebase_md"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = ["E501", "TCH"]  # E501: line length handled by formatter; TCH: Pydantic needs runtime imports

[tool.ruff.lint.isort]
known-first-party = ["codebase_md"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tree_sitter.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
collect_ignore_glob = ["tests/fixtures/**"]
markers = [
    "integration: marks tests that clone real repos (deselect with '-m not integration')",
]
